# ProjectTracker

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  TODO-backend-logging.md  docker-compose.yml
deploy/: README.md
src/: CMakeLists.txt
src/bootstrap/: ScheduleBootstrap.cpp  ScheduleBootstrap.h  StartupLogMessage.h  ThreadNumConfig.h  main.cc  main.cpp
src/common/api/: ApiResponse.h
src/common/db/: SqlExecutor.h
src/common/error/: BusinessException.cpp  BusinessException.h  ErrorCode.h  Throw.cpp  Throw.h
src/common/util/: JsonUtil.h  PasswordUtil.h  QueryParamUtil.h
src/filters/: AdminRequiredFilter.cpp  AdminRequiredFilter.h  AuthHelper.h  LoginRateLimitFilter.cpp  LoginRateLimitFilter.h  LoginRequiredFilter.cpp  LoginRequiredFilter.h  RateLimitHelper.cpp  RateLimitHelper.h
src/http/: ExceptionHandling.cpp  ExceptionHandling.h  RequestLogging.cpp  RequestLogging.h
src/modules/auth/controller/: AuthController.cpp  AuthController.h
src/modules/auth/repository/: AuthRepository.cpp  AuthRepository.h
src/modules/auth/service/: AuthService.cpp  AuthService.h
src/modules/device_log/controller/: DeviceController.cpp  DeviceController.h
src/modules/device_log/repository/: DeviceRepository.cpp  DeviceRepository.h
src/modules/device_log/service/: DeviceService.cpp  DeviceService.h
src/modules/health/controller/: HealthController.cpp  HealthController.h
src/modules/health/service/: HealthService.cpp  HealthService.h
src/modules/project/controller/: ProjectController.cpp  ProjectController.h
src/modules/project/domain/: ProjectEnums.h
src/modules/project/dto/: ProjectDto.h
src/modules/project/repository/: ProjectRepository.cpp  ProjectRepository.h
src/modules/project/service/: ProjectService.cpp  ProjectService.h
src/modules/project_ai/controller/: ProjectAiController.cpp  ProjectAiController.h
src/modules/project_ai/service/: ProjectAiService.cpp  ProjectAiService.h
src/modules/project_member/controller/: ProjectMemberController.cpp  ProjectMemberController.h
src/modules/project_member/dto/: ProjectMemberDto.h
src/modules/project_member/repository/: ProjectMemberRepository.cpp  ProjectMemberRepository.h
src/modules/project_member/service/: ProjectMemberService.cpp  ProjectMemberService.h
src/modules/project_node/controller/: ProjectNodeController.cpp  ProjectNodeController.h
src/modules/project_node/domain/: ProjectNodeEnums.h
src/modules/project_node/dto/: ProjectNodeDto.h
src/modules/project_node/repository/: ProjectNodeRepository.cpp  ProjectNodeRepository.h
src/modules/project_node/service/: ProjectNodeService.cpp  ProjectNodeService.h
src/modules/project_template/controller/: ProjectTemplateController.cpp  ProjectTemplateController.h
src/modules/project_template/domain/: ProjectTemplateEnums.h
src/modules/project_template/repository/: ProjectTemplateRepository.cpp  ProjectTemplateRepository.h
src/modules/task/: TEMP_CONCURRENCY_STRATEGY.md
src/modules/task/controller/: TaskController.cpp  TaskController.h
src/modules/task/domain/: TaskEnums.h
src/modules/task/dto/: TaskDto.h
src/modules/task/repository/: TaskRepository.cpp  TaskRepository.h
src/modules/task/service/: TaskService.cpp  TaskService.h
src/modules/user/controller/: UserController.cpp  UserController.h
src/modules/user/domain/: UserEnums.h
src/modules/user/repository/: UserRepository.cpp  UserRepository.h
tests/: CMakeLists.txt  TESTING_PLAN.md
tests/bootstrap/: StartupLogMessageTest.cpp  ThreadNumConfigTest.cpp
tests/http/: HealthControllerTest.cpp  HealthServiceTest.cpp  RequestLoggingTest.cpp  createProject.http  createUser.http  listProjectTemplates.http  listProjects.http  listUsers.http
tests/http/auth/: auth.http  rate_limit.http
tests/http/device_log/: createDevice.http  createDeviceUsageLog.http  deleteDevice.http  listDeviceUsageLogs.http  listDevices.http
tests/http/modules/: auth.http  device.http  project.http  project_member.http  project_node.http  task.http  user.http
tests/http/project/: completeProject.http  createProject.http  deleteProject.http  getProjectDetail.http  getProjectGanttMembers.http  getProjectGanttNodes.http  listProjectOwnerCandidates.http  reopenProject.http  startProject.http  transferProjectOwner.http  updateProjectBasicInfo.http
tests/http/project_ai/: generateProjectDraft.http
tests/http/project_member/: addProjectMember.http  listProjectMemberCandidates.http  listProjectMembers.http  removeProjectMember.http
tests/http/project_node/: applyProjectNodeTemplate.http  completeProjectNode.http  createProjectNode.http  deleteProjectNode.http  getProjectNodeDetail.http  getProjectNodeGantt.http  listProjectNodes.http  reopenProjectNode.http  reorderProjectNodes.http  startProjectNode.http  updateProjectNodeBasicInfo.http
tests/http/project_template/: getProjectTemplateDetail.http
tests/http/scenarios/: scenario_project_collaboration.http
tests/http/task/: createTask.http  deleteTask.http  getTaskDetail.http  listMyTasks.http  listNodeTasks.http  listTaskProgressRecords.http  reopenTask.http  startTask.http  submitTaskProgress.http  updateTaskBasicInfo.http
tests/http/user/: getUserDetail.http  updateUserBasicInfo.http  updateUserStatus.http
tests/integration/: HealthServiceTest.cpp
tests/unit/: HealthServiceUnitTest.cpp  PasswordUtilTest.cpp
tests/unit/bootstrap/: ThreadNumConfigTest.cpp
tests/unit/common/: ErrorTest.cpp  JsonUtilTest.cpp  PasswordUtilTest.cpp  QueryParamUtilTest.cpp
tests/unit/filters/: AuthHelperTest.cpp  RateLimitHelperTest.cpp
tests/unit/http/: ExceptionHandlingTest.cpp  RequestLoggingTest.cpp
tools/ai_project_manager/: README.md  pyproject.toml
tools/ai_project_manager/scripts/: build_dataset.py  generate_once.py  generate_worker.py  run_inference.py  train_model.py
tools/ai_project_manager/tests/: test_cli.py  test_dataset_builder.py  test_generate_once_script.py  test_generate_worker_script.py  test_heuristic_generator.py  test_model_generator.py  test_model_plan_format.py  test_normalizer.py  test_schemas.py  test_validator.py
(+249 files in other folders)
